test/fixtures/configs/projects/patch/update/fail/auth.js
exports.wrongUser = {
  url: '/users/1/projects/1',
  method: 'patch',
  payload: {
    title: 'bad form, peter'
  },
  headers: {
    authorization: 'token userToken2'
  }
};
